# copier-bug-example

./: README.md  copier.yaml  pyproject.toml
includes/: vars.jinja
skeleton/: README.md.jinja  order.yaml.jinja  {{_copier_conf.answers_file}}.jinja
tests/: helpers.py  test_smoke.py
